--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 body {
-    color: white;
-    background: black;
+    color: rgb(231, 181, 181);
+    background: rgb(87, 2, 2);
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
 
 header {
-    border-bottom: solid 2px rgb(42, 122, 228);
+    border-bottom: solid 2px rgb(15, 108, 230);
     padding: 20px;
     font-size: 32px;
-    color: rgb(42, 122, 228);
+    color: rgb(158, 193, 238);
 }
 
 .chamada {
-    background: rgb(184, 156, 213);
+    background: rgb(223, 200, 247);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
@@ -52,9 +52,9 @@ p {
 
 .categoria-videos img:hover {
     opacity: 1.0;
-    border: 3px solid green;
+    border: 3px solid rgb(164, 233, 164);
 }
 
 .categoria h2 {
-    color: rgb(42, 122, 228);
+    color: rgb(146, 177, 218);
 }
